<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group_main">
        <item
            android:id="@+id/nav_all_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/nav_all_notes" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_personal"
            android:title="@string/nav_personal" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_work"
            android:title="@string/nav_work" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_study"
            android:title="@string/nav_study" />
        <item
            android:id="@+id/nav_misc"
            android:icon="@drawable/ic_misc"
            android:title="@string/nav_misc" />
    </group>

    <group android:id="@+id/nav_group_other">
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/nav_trash" />
    </group>

    <group android:id="@+id/nav_group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_sign_out" />
    </group>
</menu>