<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/nav_all_notes" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favorites" />
    </group>

    <item android:title="@string/nav_categories">
        <menu>
            <item
                android:id="@+id/nav_personal"
                android:icon="@drawable/ic_category"
                android:title="@string/category_personal" />
            <item
                android:id="@+id/nav_work"
                android:icon="@drawable/ic_category"
                android:title="@string/category_work" />
            <item
                android:id="@+id/nav_study"
                android:icon="@drawable/ic_category"
                android:title="@string/category_study" />
            <item
                android:id="@+id/nav_misc"
                android:icon="@drawable/ic_category"
                android:title="@string/category_misc" />
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_trash"
                android:icon="@drawable/ic_trash"
                android:title="@string/nav_trash" />
        </menu>
    </item>
</menu>
